# django-sample

./: .dockerignore  .editorconfig  .env.development  .eslintrc.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  RENDER_DEPLOY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  test_api.http
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
django_sample/: asgi.py  settings.py  urls.py  wsgi.py
docs/: ENVIRONMENT_SETUP.md  SUPABASE_RENDER_DEPLOY.md
